test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-unmanaged-from-oknil-shared.good
init-field-arg-nonnil-unmanaged-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-unmanaged-from-oknil-shared.chpl:10: error: cannot assign to non-nilable unmanaged MyClass from nilable shared MyClass?
